# bq-loader-query-generator

./: .gitignore  README.md  pyproject.toml  setup.py
bq_query_generator/: generator.py  query_builder.py  utils.py
bq_query_generator/templates/: insert.sql.j2  merge.sql.j2  truncate_load.sql.j2
cli/: generate.py  generate_sql.py
examples/: sample_schema.json
examples/metadata/: metadata.sql
tests/: test_generator_merge.py
tests/sql/: insert_generated.sql  merge_generated.sql  truncate_load_generated.sql
